bynkc/tests/fixtures/negative/275_contract_impure_predicate/src/demo/c.bynk
commons demo.c

fn f(x: Int) -> Int
  ensures bad: expect result > 0
{
  x
}
